--- a/src/theme.scss
+++ b/src/theme.scss
@@ -132,14 +132,18 @@ $_tertiary: map.merge(map.get($_palettes, tertiary), $_rest);
 $light-theme: mat.define-theme((color: (theme-type: light,
         primary: $_primary,
         tertiary: $_tertiary,
+        use-system-variables: true,
       ),
-      typography: (brand-family: 'Comic Sans',
+      typography: (brand-family: 'Helvetica Neue',
+        // use-system-variables: true,
         bold-weight: 900),
       density: (scale: -1)));
 $dark-theme: mat.define-theme((color: (theme-type: dark,
         primary: $_primary,
         tertiary: $_tertiary,
+        use-system-variables: true,
       ),
-      typography: (brand-family: 'Comic Sans',
+      typography: (brand-family: 'Helvetica Neue',
+        // use-system-variables: true,
         bold-weight: 900),
       density: (scale: -1)));
